<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_publish_content"
            android:icon="@drawable/publish"
            android:title="@string/publish_content"/>
        <item android:id="@+id/nav_my_collection"
            android:icon="@drawable/my_collection"
            android:title="@string/my_collection"/>
        <item android:id="@+id/nav_my_favorites"
            android:icon="@drawable/favorites"
            android:title="@string/my_favorites"/>
        <item android:id="@+id/nav_drafts"
            android:icon="@drawable/drafts"
            android:title="@string/drafts"/>
        <item android:id="@+id/nav_user_center"
            android:icon="@drawable/user_center"
            android:title="@string/user_center"/>
        <item android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>
    </group>
</menu>